--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 <script>
     // 1. CONFIGURAÇÃO DO AMBIENTE
-    const SUPABASE_URL = 'SUA_URL_AQUI'; // <--- INSIRA AQUI
-    const SUPABASE_KEY = 'SUA_KEY_AQUI'; // <--- INSIRA AQUI
+    const SUPABASE_URL = 'https://xmjxfcwnytguwntvloja.supabase.co'; // <--- INSIRA AQUI
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhtanhmY3dueXRndXdudHZsb2phIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyMzA4MDEsImV4cCI6MjA4NTgwNjgwMX0.HSJbuCrnL7D3AlEpqlxq28yowHmUlqZyQSOCJRrmgOM'; // <--- INSIRA AQUI
     
     // Inicialização robusta usando o objeto global do navegador
     const { createClient } = window.supabase;
@@ -157,3 +157,4 @@
 
 </body>
 </html>
+
