--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
     const SUPABASE_URL = 'https://xmjxfcwnytguwntvloja.supabase.co'; // <--- INSIRA AQUI
     const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhtanhmY3dueXRndXdudHZsb2phIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyMzA4MDEsImV4cCI6MjA4NTgwNjgwMX0.HSJbuCrnL7D3AlEpqlxq28yowHmUlqZyQSOCJRrmgOM'; // <--- INSIRA AQUI
     
-    // Inicialização robusta usando o objeto global do navegador
+    // Teste de conexão imediato
+let supabase;
+try {
     const { createClient } = window.supabase;
-    const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+    supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
+    console.log("Sistema Supabase inicializado com sucesso.");
+} catch (e) {
+    alert("ERRO CRÍTICO NA CARGA DO SUPABASE: " + e.message);
+}
 
     // 2. MAPEAMENTO DE ELEMENTOS
     const authForm = document.getElementById('auth-form');
@@ -157,4 +163,5 @@
 
 </body>
 </html>
+
 
