--- a/perfil.html
+++ b/perfil.html
@@ -6,13 +6,37 @@
     <title>Configurar Perfil - LinkImóvel IA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #f8fafc; padding: 40px 0; }
-        .profile-container { max-width: 650px; margin: auto; background: white; padding: 35px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.08); }
-        .btn-save { background: #22c55e; border: none; color: white; font-weight: 700; padding: 14px; transition: 0.3s; }
-        .btn-save:hover { background: #16a34a; transform: scale(1.01); }
-        .section-title { border-left: 5px solid #2563eb; padding-left: 15px; margin-bottom: 25px; font-weight: 800; color: #1e293b; }
-        .required-label::after { content: " *"; color: red; }
-    </style>
+    body { 
+        background-color: #ffffff; 
+        padding: 15px; 
+        font-family: 'Segoe UI', sans-serif; 
+        overflow-x: hidden;
+    }
+    .profile-container { 
+        width: 100%; 
+        margin: 0; 
+        padding: 10px; 
+    }
+    .btn-save { 
+        background: #22c55e; 
+        border: none; 
+        color: white; 
+        font-weight: 700; 
+        padding: 12px; 
+        width: 100%;
+        border-radius: 8px;
+    }
+    .section-title { 
+        border-left: 4px solid #2563eb; 
+        padding-left: 10px; 
+        font-size: 1.2rem;
+        margin-bottom: 20px; 
+        font-weight: 800; 
+    }
+    .form-label { font-size: 0.85rem; font-weight: 600; margin-bottom: 4px; }
+    .form-control, .form-select { font-size: 0.9rem; padding: 10px; }
+    hr { margin: 20px 0; }
+</style>
 </head>
 <body>
 
@@ -144,4 +168,5 @@
     loadProfile();
 </script>
 </body>
+
 </html>
